Full function working

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
   		<section class="main__left--section">
   			<input id="main__input" placeholder="Ask your question here!" class="input__size"></input>
   			<button class="input__size" id="main__button" >Get your anwser</button>
-  			<div id="js__text"></div>
-  			<div id="eight__ball"></div>
-  			<button id="main__clear--button">Clear</button> 
+  			<div class="js__question"></div>
+        <div class="js__answer"></div>
+  			<div class="eight__ball"></div>
+  			<button class="main__clear--button">Clear</button> 
   		</section>
   		<section class="main__right--section">
   		</section>
